tests/diagnostics/snapshots/test_message_with_span.txt
Error: Can't compare apples with oranges (at <unknown>:1:6)
  | 
1 | apple == orange
  |       ^^

Please refer to Barone (BMJ, 2000), https://doi.org/10.1136%2Fbmj.321.7276.1569
for further details.